[New Multicolumn] -webkit-column-break-inside:avoid doesn't work https://bugs.webkit.org/show_bug.cgi?id=129299

Patch by Morten Stenshorne <mstensho@opera.com> on 2014-02-25
Reviewed by Andrei Bucur.

Source/WebCore:

adjustForUnsplittableChild() simply forgot to check whether we
were inside flow thread based multicol.

Test: fast/multicol/newmulticol/avoid-column-break-inside.html

* rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::adjustForUnsplittableChild):

LayoutTests:

* fast/multicol/newmulticol/avoid-column-break-inside-expected.html: Added.
* fast/multicol/newmulticol/avoid-column-break-inside.html: Added.

Canonical link: https://commits.webkit.org/147357@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164649 268f45cc-cd09-0410-ab3c-d52691b4dbfc